--- a/Practical-05.ipynb
+++ b/Practical-05.ipynb
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -803,14 +803,14 @@
        "    <tr>\n",
        "      <th>CART</th>\n",
        "      <td>1.0000</td>\n",
-       "      <td>0.7086</td>\n",
-       "      <td>0.2914</td>\n",
+       "      <td>0.7088</td>\n",
+       "      <td>0.2912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RF</th>\n",
-       "      <td>0.9821</td>\n",
-       "      <td>0.8852</td>\n",
-       "      <td>0.0969</td>\n",
+       "      <td>0.9823</td>\n",
+       "      <td>0.8850</td>\n",
+       "      <td>0.0973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XGB</th>\n",
@@ -826,23 +826,23 @@
        "                                  R2_train_data  \\\n",
        "Linear                                   0.8576   \n",
        "CART                                     1.0000   \n",
-       "RF                                       0.9821   \n",
+       "RF                                       0.9823   \n",
        "XGB                                      1.0000   \n",
        "\n",
        "                                   R2_test_data  \\\n",
        "Linear                                   0.7992   \n",
-       "CART                                     0.7086   \n",
-       "RF                                       0.8852   \n",
+       "CART                                     0.7088   \n",
+       "RF                                       0.8850   \n",
        "XGB                                      0.8942   \n",
        "\n",
        "                                        R2_diff  \n",
        "Linear                                   0.0584  \n",
-       "CART                                     0.2914  \n",
-       "RF                                       0.0969  \n",
+       "CART                                     0.2912  \n",
+       "RF                                       0.0973  \n",
        "XGB                                      0.1058  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,8 +851,8 @@
     "regressors = {\n",
     "    'Linear': LinearRegression(),\n",
     "    'CART': DecisionTreeRegressor(),\n",
-    "    'RF': ??(),\n",
-    "    'XGB': ??()\n",
+    "    'RF': RandomForestRegressor(),\n",
+    "    'XGB': XGBRegressor()\n",
     "}\n",
     "\n",
     "# a dict to store the R2 of training and testing data\n",
@@ -865,7 +865,7 @@
     "           ])\n",
     "    model = pipeline.fit(train_x, train_y)\n",
     "    # predictions = model.predict(test_x)\n",
-    "    dict_results[name] = [model.score(train_x, train_y), model.score(test_x, test_y), model.score(??, ??) - model.score(??, ??)]\n",
+    "    dict_results[name] = [model.score(train_x, train_y), model.score(test_x, test_y), model.score(train_x, train_y) - model.score(test_x, test_y)]\n",
     "\n",
     "# transform dict_models to dataframe\n",
     "df_models = pd.DataFrame.from_dict(dict_results, orient='index', columns=['R2_train_data', 'R2_test_data', 'R2_diff'])\n",
@@ -920,31 +920,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: mlxtend==0.21.0 in /opt/conda/lib/python3.10/site-packages (0.21.0)\n",
-      "Requirement already satisfied: setuptools in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (63.2.0)\n",
-      "Requirement already satisfied: numpy>=1.16.2 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (1.23.3)\n",
+      "Collecting mlxtend==0.21.0\n",
+      "  Downloading mlxtend-0.21.0-py2.py3-none-any.whl (1.3 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pandas>=0.24.2 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (1.4.3)\n",
+      "Requirement already satisfied: matplotlib>=3.0.0 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (3.5.2)\n",
+      "Requirement already satisfied: scipy>=1.2.1 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (1.9.1)\n",
       "Requirement already satisfied: scikit-learn>=1.0.2 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (1.1.1)\n",
       "Requirement already satisfied: joblib>=0.13.2 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (1.1.0)\n",
-      "Requirement already satisfied: pandas>=0.24.2 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (1.4.3)\n",
-      "Requirement already satisfied: scipy>=1.2.1 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (1.9.1)\n",
-      "Requirement already satisfied: matplotlib>=3.0.0 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (3.5.2)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (9.2.0)\n",
+      "Requirement already satisfied: numpy>=1.16.2 in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (1.22.4)\n",
+      "Requirement already satisfied: setuptools in /opt/conda/lib/python3.10/site-packages (from mlxtend==0.21.0) (63.2.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (21.3)\n",
       "Requirement already satisfied: pyparsing>=2.2.1 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (3.0.9)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (1.4.4)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (9.2.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (0.11.0)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (2.8.2)\n",
       "Requirement already satisfied: fonttools>=4.22.0 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (4.34.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (21.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (0.11.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/conda/lib/python3.10/site-packages (from matplotlib>=3.0.0->mlxtend==0.21.0) (1.4.4)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.10/site-packages (from pandas>=0.24.2->mlxtend==0.21.0) (2022.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.10/site-packages (from scikit-learn>=1.0.2->mlxtend==0.21.0) (3.1.0)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib>=3.0.0->mlxtend==0.21.0) (1.16.0)\n"
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib>=3.0.0->mlxtend==0.21.0) (1.16.0)\n",
+      "Installing collected packages: mlxtend\n",
+      "Successfully installed mlxtend-0.21.0\n"
      ]
     }
    ],
@@ -961,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,13 +990,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# one-hot encoding\n",
     "bike_rentail_numeric = pd.get_dummies(bike_rental)\n",
-    "bike_rental_final = bike_rentail_numeric.drop(['season_SPRING', 'mnth_JAN', 'holiday_NO HOLIDAY', 'weekday_MON', 'workingday_WORKING DAY', 'weathersit_GOOD'], axis=??)\n",
+    "bike_rental_final = bike_rentail_numeric.drop(['season_SPRING', 'mnth_JAN', 'holiday_NO HOLIDAY', 'weekday_MON', 'workingday_WORKING DAY', 'weathersit_GOOD'], axis=1)\n",
     "\n",
     "# train-test split\n",
     "random_state_split = 100\n",
@@ -1013,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1033,9 +1037,9 @@
     "        loss='mse',\n",
     "        random_seed=123)\n",
     "\n",
-    "print('Average expected loss: %.3f' % ??)\n",
-    "print('Average bias: %.3f' % ??)\n",
-    "print('Average variance: %.3f' % ??)"
+    "print('Average expected loss: %.3f' % avg_expected_loss)\n",
+    "print('Average bias: %.3f' % avg_bias)\n",
+    "print('Average variance: %.3f' % avg_var)"
    ]
   },
   {
@@ -1053,89 +1057,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total loss</th>\n",
-       "      <th>Bias</th>\n",
-       "      <th>Variance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Linear</th>\n",
-       "      <td>739,779.1697</td>\n",
-       "      <td>705,745.3435</td>\n",
-       "      <td>34,033.8262</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CART</th>\n",
-       "      <td>936,825.7866</td>\n",
-       "      <td>433,586.5275</td>\n",
-       "      <td>503,239.2591</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RF</th>\n",
-       "      <td>488,162.1634</td>\n",
-       "      <td>408,270.6061</td>\n",
-       "      <td>79,891.5573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>XGB</th>\n",
-       "      <td>487,801.4993</td>\n",
-       "      <td>360,985.0850</td>\n",
-       "      <td>126,816.4143</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                     Total loss  \\\n",
-       "Linear                             739,779.1697   \n",
-       "CART                               936,825.7866   \n",
-       "RF                                 488,162.1634   \n",
-       "XGB                                487,801.4993   \n",
-       "\n",
-       "                                           Bias  \\\n",
-       "Linear                             705,745.3435   \n",
-       "CART                               433,586.5275   \n",
-       "RF                                 408,270.6061   \n",
-       "XGB                                360,985.0850   \n",
-       "\n",
-       "                                       Variance  \n",
-       "Linear                              34,033.8262  \n",
-       "CART                               503,239.2591  \n",
-       "RF                                  79,891.5573  \n",
-       "XGB                                126,816.4143  "
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "random_seed = 1233\n",
     "regressors = {\n",
